--- a/History.txt
+++ b/History.txt
@@ -1,7 +1,13 @@
-=== 2.0.0 / 2008-??-??
+=== 2.0.0 / 2008-04-10
 
-* N Major Enhancements:
+* 3 Major Enhancements:
   * Renamespaced everything RDoc under the RDoc module.
   * New `ri` implementation.
-* N Minor Enhancements:
-  * Switched to an ERb-based TemplatePage, see RDoc::
+    * Reads from a cache in ~/.ri/ for enhanced speed.
+    * RubyGems aware, only searches latest gem versions.
+  * Now up to over 100 tests and 200 assertions.
+* 4 Minor Enhancements:
+  * Switched to an ERb-based TemplatePage, see RDoc::TemplatePage.
+  * Class/module ri now displays attribute and constant comments.
+  * Cross-references can be disabled with a leading \.
+  * Relaxed parsing for some RDoc inline markup.
