--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,11 @@
+=== 2.1.0 / ??
+
+* N Major Enhancements:
+  * RDoc now knows about meta-programmed methods.  See RDoc::Parser::Ruby.
+  * Reorganized parsers under RDoc::Parser base class.
+* N Bug Fixes:
+  * `ri Foo.bar` now looks for class methods also
+
 === 2.0.0 / 2008-04-10
 
 * 3 Major Enhancements:
