--- a/History.txt
+++ b/History.txt
@@ -14,6 +14,7 @@
   * RDoc no longer converts characters inside tt tags
   * Fixed "unitialized constant RDoc::Markup::ToHtml::HTML"
   * Fixed generation of relative links
+  * Fixed various diagram generation issues
 
 === 2.0.0 / 2008-04-10
 
