Fix some of rdoc's HTML worst typesetting issues: * The ' character will be converted into an apostrophe, opening single quote,   or closing single quote correctly in most cases. * The " character will be converted into an opening double quote or a closing   double quote in most cases.
Note, however, that tons of issues with HTML typesetting remain.  Fixing these
properly will require a rewrite of the markup engine, which I will look at next.
This is a short term fix intended to ameliorate the worst of the issues.

--- a/History.txt
+++ b/History.txt
@@ -12,6 +12,11 @@
   * Fixed main page for frameless template.  Patch by Marcin Raczkowski.
   * Fixed missing stylesheet in generated chm.  Patch by Gordon Thiesfeld.
   * Fixed the parsing of module names starting with '::'.
+  * Fixed some (but not all!) of the issues with RDoc's HTML typesetting:
+  ** RDoc now correctly converts ' characters to apostrophes, opening single
+     quotes, and closing single quotes in most cases (smart single quotes).
+  ** RDoc now correctly converts " characters to opening double quotes and
+     and closing double quotes in most cases (smart double quotes).
 
 === 2.1.0 / 2008-07-20
 
