--- a/History.txt
+++ b/History.txt
@@ -14,7 +14,8 @@
   * All built-in templates now output valid, strict XHTML.
   * The documentation is slightly better organized (the markup details were
     merged into the RDoc module's documentation).
-  * Improve rdoc's HTML generation speed by about 20%.
+  * Improved rdoc's HTML generation speed by about 20% (on Windows, the
+    boost seems larger).
 
 * N Bug fixes:
   * Fixed prototype detection in C parser.  Can process ruby 1.8 C files
