Touch up History.txt.

--- a/History.txt
+++ b/History.txt
@@ -31,16 +31,14 @@
     that both a Foo class and a Foo module existed.
   * Prevented RDoc from trying to parse binary files, which would produce
     garbage output.
-  * Fixed some (but not all!) of the issues with RDoc's HTML typesetting:
-  ** RDoc now correctly converts ' characters to apostrophes, opening single
-     quotes, and closing single quotes in most cases (smart single quotes).
-  ** RDoc now correctly converts " characters to opening double quotes and
-     and closing double quotes in most cases (smart double quotes).
-  ** (c) correctly is converted into the copyright symbol.
+  * RDoc now correctly converts ' characters to apostrophes, opening single
+    quotes, and closing single quotes in most cases (smart single quotes).
+  * RDoc now correctly converts " characters to opening double quotes and
+    and closing double quotes in most cases (smart double quotes).
+  * (c) correctly is converted into the copyright symbol.
+  * '&' characters in text now correctly are translated to HTML character codes.
   * Fixed main page for frameless template.  Patch by Marcin Raczkowski.
   * Fixed missing stylesheet in generated chm.  Patch by Gordon Thiesfeld.
-  * '&' characters in text now correctly are translated to HTML character
-     codes.
   * Fixed broken method links in the built-in templates.
   * RDoc properly links to files and classes in the one page HTML template.
   * The kilmer and hefss templates properly syntax highlight when inlining
