--- a/History.txt
+++ b/History.txt
@@ -1,11 +1,15 @@
 === 2.2.1 / 2008-09-24
-This version provides some minor fixes and enhancements to 2.2.0.
+This version provides some minor fixes and enhancements to 2.2.0 intended
+to polish RDoc for Ruby 1.9.1.
 
 * X Major Enhancements
 
 * Y Minor Enhancements
 
 * Z Bug Fixes
+  * Explicitly set the html template's text color, so that the generated
+    documentation will display correctly on browsers with custom text and
+    background color settings (thanks to Luther Thompson).
 
 === 2.2.0 / 2008-09-19
 This version includes some significant enhancements to ri.  See RI.txt for
