Fix a crash when rdoc is told a parse an empty file.

--- a/History.txt
+++ b/History.txt
@@ -9,6 +9,7 @@
 
 * Z Bug Fixes
   * Fix missing superclass in ri output.
+  * Fix an rdoc crash when told to parse an empty file.
  
 === 2.2.1 / 2008-09-24
 This version provides some minor fixes and enhancements to 2.2.0 intended
